# Tri-modal-Evolution-Agent

./: .gitignore  README.md
Benchmark_test/: README.md  pyproject.toml
Benchmark_test/configs/datasets/: daily_omni.yaml  worldsense.yaml
Benchmark_test/configs/suites/: default_benchmarks.yaml
Benchmark_test/scripts/: run_qwen3omni_resume_seq.sh  watch_qwen3omni_seq.py
Benchmark_test/src/tri_modal_evolution_agent/: paths.py
Benchmark_test/src/tri_modal_evolution_agent/cli/: eval.py  main.py  serve.py
Benchmark_test/src/tri_modal_evolution_agent/datasets/: __init__.py  daily_omni.py
Benchmark_test/src/tri_modal_evolution_agent/engine/: __init__.py  api_client.py  local_server.py
Benchmark_test/src/tri_modal_evolution_agent/evaluation/: reporting.py  runner.py
Train/: .env.example  .gitignore  README.md  pyproject.toml
Train/configs/datasets/: datasets.yaml
Train/configs/env/: default.yaml
Train/configs/models/: qwen3_omni_30b_a3b_instruct.yaml
Train/configs/recipes/: grpo.yaml  gspo.yaml  lora_sft.yaml
Train/configs/rewards/: mimo_judge.example.yaml
Train/examples/jsonl/: grpo_sample.jsonl  gspo_sample.jsonl  sft_sample.jsonl
Train/schemas/: ms_swift_grpo.schema.json  ms_swift_gspo.schema.json  ms_swift_sft.schema.json
Train/scripts/: prepare_omnibench_grpo.py  prepare_omnibench_sft.py  run_megatron_grpo_mimo_8gpu.sh  sbatch_megatron_grpo_mimo_8gpu.sh  train_grpo.py  train_gspo.py  train_lora_sft.py
Train/src/: sitecustomize.py
Train/src/qwen3omni_train/: __init__.py  cli.py  config.py  datasets.py  paths.py  swift_launcher.py
Train/src/qwen3omni_train/converters/: __init__.py  base.py
Train/src/qwen3omni_train/recipes/: __init__.py  grpo.py  gspo.py  lora_sft.py
Train/src/qwen3omni_train/rewards/: __init__.py  choice_reward.py  mimo_judge_reward.py
configs/datasets/: omnibench.yaml  worldsense.yaml
configs/suites/: default_benchmarks.yaml
ms-swift/: README.md  UPSTREAM.md
(+27 files in other folders)
